templates/default/style/base.css
/* ... */
.ui-selectmenu { height: 1.8em; width:100%; }
.ui-selectmenu:focus { outline: none; }
.ui-selectmenu-status { line-height: 1.0em; }
.ui-selectmenu-open li.ui-selectmenu-item-selected { border: 1px solid #655e4e; background: #fff8e1 url(../images/ui-bg_gloss-wave_80_fff8e1_500x100.png) 50% 50% repeat-x; font-weight: bold; color: #4c3000; }

/**
 * CSS Weirdness
 */
.exp-content { overflow: auto; }


.guild-stats-container { padding:20px 20px 10px; }
.filtertitle {color: #a37516; letter-spacing: -1px; font-family: Georgia,"Times New Roman",Times,serif;  font-size: 20px;  line-height: 20px !important; padding: 8px 0 5px 10px; }
.filtercrest { background: url(../images/guildbank_crest.gif) bottom center no-repeat; height: 34px!important; width: 100%; margin: 0 auto; }
.filtercontainer { background-image: url(../images/sbg.gif); background-repeat: repeat; margin: 0px auto; float:center; border: 1px #caa644 solid; padding: 8px 6px;  font-family: Arial,Helvetica,sans-serif; font-size: 13px; color:#0070dd; }
.bankcontentsfilter { height:40px; background: url('../images/filter-tabs.gif') 0 0 repeat-x; border-width:1px;  border-style:solid; border-color:#c39749 #c39749 #fbeb9e #c39749; margin:0 55px; padding: 6px; }
.bottomshadow { background: url(../images/guildbank_shadow.gif) top center no-repeat; width: 100%; height: 20px; margin: 0 auto; }

.tooltip.box-label { height: 20px; font: bold normal 20px/24px "Times New Roman", Times, serif; color: #000000; padding: 10px 10px 10px 40px; margin-bottom: 5px; background: url(../images/skill_title_bg.png) repeat-x left top; position: relative; }

